# FastAPI_template

./: .env  Dockerfile  Firstbase_poc.pyproj  Firstbase_poc.sln  LICENSE  README.md  docker-compose.yml  pyproject.toml  requirements.txt  test.db
app/: exceptions.py  main.py
app/api/v1/endpoints/: product.py  user.py
app/api/v1/test/: test_product.py
app/core/: config.py
app/db/: base.py  base_class.py  session.py
app/models/: product.py  user.py
app/repositories/: product_repository.py  user_repository.py
app/schemas/: product.py  user.py
app/services/: user_service.py
