[tool.poetry]
name = "firstbase_poc"
version = "0.0.1"
description = "POC"
authors = ["Philip Scheer <philip.scheer@levva.io>"]

[tool.poetry.dependencies]
python = ">=3.9"
fastapi = "^0.115.12"
uvicorn = "^0.34.1"
sqlalchemy = "^2.0.40"
pydantic = "^2.11.3"
pydantic-settings = "^2.8.1"

[tool.poetry.dev-dependencies]
pytest = "^7.0.0"
